--- a/html/jiejue3/jiejue3.html
+++ b/html/jiejue3/jiejue3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>解决方案-综合页</title>
+		<title>通用技术平台</title>
 		<link rel="stylesheet" type="text/css" href="jiejue3.css">
 	</head>
 	<body>
