--- a/html/guanyu/guanyu.html
+++ b/html/guanyu/guanyu.html
@@ -51,7 +51,7 @@
 					<img src="images/images/guanyu1_03.jpg" alt="guanyu1">
 					<span>关于中电仪器</span>
 					<p>企业简介</p>
-					<p><a href="https://2017zhangmengru.github.io/web1/html/fazhan/fazhan.html">发展历程</a></p>
+					<p><a class="c2"  href="https://2017zhangmengru.github.io/web1/html/fazhan/fazhan.html">发展历程</a></p>
 					<p>企业荣誉</p>
 					<p>企业资质</p>
 					<p>挂靠机构</p>
