--- a/html/guanyu/guanyu.html
+++ b/html/guanyu/guanyu.html
@@ -19,7 +19,7 @@
 							<option value="china">Chinese</option>	
 						</select>
 						<img src="images/xiajiao.jpg" alt="xiajiao">
-					| &nbsp; 登录 &nbsp;|&nbsp; 注册
+					| &nbsp 登录 &nbsp|&nbsp 注册
 				</div></p>
 				<div class="a3">
 					<ul>
@@ -51,7 +51,7 @@
 					<img src="images/images/guanyu1_03.jpg" alt="guanyu1">
 					<span>关于中电仪器</span>
 					<p>企业简介</p>
-					<p><a class="c2"  href="https://2017zhangmengru.github.io/web1/html/fazhan/fazhan.html">发展历程</a></p>
+					<p><a href="https://2017zhangmengru.github.io/web1/html/fazhan/fazhan.html">发展历程</a></p>
 					<p>企业荣誉</p>
 					<p>企业资质</p>
 					<p>挂靠机构</p>
@@ -115,7 +115,7 @@
 				<div class="e5">
 				www.cetcei.com  中电科仪器仪表有限公司
 				</div>
-				<div class="e6">《中华人民共和国电信与信息服务业务经营许可证》编号： 皖ICP备05003230 &nbsp法律说明 |  网站地图</div>
+				<div class="e6">《中华人民共和国电信与信息服务业务经营许可证》编号： 皖ICP备05003230 &nbsp;法律说明 |  网站地图</div>
 			</div>
 			<div class="f">
 				<ul>
