--- a/html/yuwomenhezuo/index.html
+++ b/html/yuwomenhezuo/index.html
@@ -41,7 +41,7 @@
 		</div>
 		<div class="in">
             <input type="text" name="search" placeholder="搜索">
-            <button type="submit"><img src="images/fdj.png"></button>
+            <img class="kk"src="images/fdj.png"/>
         </div>
     </div>
     <div class="second">
