--- a/html/guanyu/guanyu.html
+++ b/html/guanyu/guanyu.html
@@ -1,4 +1,4 @@
-<! DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -50,11 +50,11 @@
 				<li>
 					<img src="images/images/guanyu1_03.jpg" alt="guanyu1">
 					<span>关于中电仪器</span>
-					<p>企业简介</p>
-					<p><a href="https://2017zhangmengru.github.io/web1/html/fazhan/fazhan.html">发展历程</a></p>
-					<p>企业荣誉</p>
+					<p><a href="https://2017zhangmengru.github.io/web1/html/qiyejianjie/qiyejianjie.html" style="color: #2756a4">企业简介</a></p>
+					<p><a href="https://2017zhangmengru.github.io/web1/html/fazhan/fazhan.html" style="color: #2756a4">发展历程</a></p>
+					<p><a href="https://2017zhangmengru.github.io/web1/html/qiyerongyu/qiyerongyu.html" style="color: #2756a4">企业荣誉</a></p>
 					<p>企业资质</p>
-					<p>挂靠机构</p>
+					<p><a href="https://2017zhangmengru.github.io/web1/html/guakaojigou/guakaojigou.html" style="color: #2756a4">挂靠机构</a></p>
 				</li>
 				<li>
 					<img src="images/images/guanyu2_03.jpg" alt="guanyu2">
@@ -68,8 +68,8 @@
 					<p>大学关系</p>
 				</li>
 				<li>
-					<img src="images/images/guanyu4_03.jpg" alt="guanyu4">
-					<span>联系信息</span>
+					<img src="images/images/guanyu4_03.jpg" alt="guanyu4"><br/>
+					<span><a href="https://2017zhangmengru.github.io/web1/html/lianxixinxi/lianxixinxi.html" style="font-size: 16px;">联系信息</a></span>
 					<p>计量校准</p>
 					<p>产品选购</p>
 					<p>技术支持</p>
