--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div class="one">
-		<a><img src="index/logo.jpg" alt="logo"/></a>
+		<a class="one1"><img src="index/logo.jpg" alt="logo"/></a>
 		<div class="onea">
 			<p class="onea1">电话：800-8687-041</p>
 			<p class="onea2"><span class="onea3">中文</span>
@@ -20,14 +20,14 @@
 		</div>
 		<div class="oneb">
 			<ul class="oneb1">
-				<li>首页</li>
-				<li>产品中心</li>
-				<li>技术支持</li>
-				<li>解决方案</li>
-				<li>计量和服务</li>
-				<li>新闻中心</li>
-				<li>访问论坛</li>
-				<li>关于我们</li>
+				<li><a href="https://2017zhangmengru.github.io/web1/ ">首页</a></li>
+				<li><a>产品中心</a></li>
+				<li><a href="https://2017zhangmengru.github.io/web1/html/jishuzhichi/JiShuZhiChi%20ZongHeYe.html">技术支持</a></li>
+				<li><a href="https://2017zhangmengru.github.io/web1/html/jiejuefangan2/jiejuefangan2.html">解决方案</a></li>
+				<li><a>计量和服务</a></li>
+				<li><a href="https://2017zhangmengru.github.io/web1/html/xinwenzhongxin/%E6%96%B0%E9%97%BB%E4%B8%AD%E5%BF%83">新闻中心</a></li>
+				<li><a>访问论坛</a></li>
+				<li><a href="https://2017zhangmengru.github.io/web1/html/guanyu/guanyu.html">关于我们</a></li>
 			</ul>
 			<div class="oneb2">
 				<p>搜索</p>
@@ -191,6 +191,8 @@
 			</div>
 		</div>
 	</div>
+	<div class="duo"></div>
+	<div class="shishi"></div>
 	<div class="six">
 		<a class="six1">
 			<img src="index/telephone_icon.png" alt="phone"/>
