--- a/html/guanyu/guanyu.html
+++ b/html/guanyu/guanyu.html
@@ -53,19 +53,19 @@
 					<p><a href="https://2017zhangmengru.github.io/web1/html/qiyejianjie/qiyejianjie.html" style="color: #2756a4">企业简介</a></p>
 					<p><a href="https://2017zhangmengru.github.io/web1/html/fazhan/fazhan.html" style="color: #2756a4">发展历程</a></p>
 					<p><a href="https://2017zhangmengru.github.io/web1/html/qiyerongyu/qiyerongyu.html" style="color: #2756a4">企业荣誉</a></p>
-					<p>企业资质</p>
+					<p><a href="https://2017zhangmengru.github.io/web1/html/qiyezizhi/index.html" style="color: #2756a4">企业资质</a></p>
 					<p><a href="https://2017zhangmengru.github.io/web1/html/guakaojigou/guakaojigou.html" style="color: #2756a4">挂靠机构</a></p>
 				</li>
 				<li>
 					<img src="images/images/guanyu2_03.jpg" alt="guanyu2">
 					<span>人力资源</span>
-					<p>工作机会</p>
+					<p><a href="https://2017zhangmengru.github.io/web1/html/renliziyuan/index.html" style="color: #2756a4">工作机会</a></p>
 				</li>
 				<li>
 					<img src="images/images/guanyu3_03.jpg" alt="guanyu3">
 					<span>与我们合作</span>
-					<p>经销商</p>
-					<p>大学关系</p>
+					<p><a href="https://2017zhangmengru.github.io/web1/html/jinxiaoshang/index.html" style="color:#2756a4">经销商</a></p>
+					<p><a href="https://2017zhangmengru.github.io/web1/html/yuwomenhezuo/index.html" style="color:#2756a4">大学关系</a></p>
 				</li>
 				<li>
 					<img src="images/images/guanyu4_03.jpg" alt="guanyu4"><br/>
