--- a/html/zuixin/zuixin.html
+++ b/html/zuixin/zuixin.html
@@ -25,14 +25,14 @@
 				</div></p>
 				<div class="a3">
 					<ul>
-						<li><a href="">首页</a></li>
+						<li><a href="ttps://2017zhangmengru.github.io/web1/">首页</a></li>
 						<li><a href="">产品中心</a></li>
-						<li><a href="">技术支持</a></li>
-						<li><a href="">解决方案</a></li>
+						<li><a href="https://2017zhangmengru.github.io/web1/html/jishuzhichi/JiShuZhiChi%20ZongHeYe.html">技术支持</a></li>
+						<li><a href="https://2017zhangmengru.github.io/web1/html/jiejuefangan2/jiejuefangan2.html">解决方案</a></li>
 						<li><a href="">计量和服务</a></li>
-						<li><a href="">新闻中心</a></li>
+						<li><a href="https://2017zhangmengru.github.io/web1/html/xinwenzhongxin/%E6%96%B0%E9%97%BB%E4%B8%AD%E5%BF%83">新闻中心</a></li>
 						<li><a href="">访问论坛</a></li>
-						<li><a href="">关于我们</a></li>
+						<li><a href="https://2017zhangmengru.github.io/web1/html/guanyu/guanyu.html">关于我们</a></li>
 						<li><input type="text" placeholder="搜索" ></li>
 					</ul>
 				</div>
