--- a/html/jiejue3/jiejue3.html
+++ b/html/jiejue3/jiejue3.html
@@ -24,25 +24,28 @@
 			<div class="daohang">
 				<ul class="dh">
 					<li>
-						<a href="">首页</a>
+						<a href="https://2017zhangmengru.github.io/web1/html/guanyu/guanyu.html">首页</a>
 					</li>
 					<li>
 						<a href="">产品中心</a>
 					</li>
 					<li>
-						<a href="">技术支持</a>
+						<a href="https://2017zhangmengru.github.io/web1/html/jishuzhichi/JiShuZhiChi%20ZongHeYe.html">技术支持</a>
 					</li>
 					<li>
-						<a href="" class="jishu">解决方案</a>
+						<a href="https://2017zhangmengru.github.io/web1/html/jiejue1/jiejue1.html" class="jishu">解决方案</a>
 					</li>
 					<li>
 						<a href="">计量和服务</a>
 					</li>
 					<li>
-						<a href="">新闻中心</a>
+						<a href="https://2017zhangmengru.github.io/web1/html/xinwenzhongxin/%E6%96%B0%E9%97%BB%E4%B8%AD%E5%BF%83">新闻中心</a>
 					</li>
 					<li>
 						<a href="">访问论坛</a>
+					</li>
+					<li>
+						<a href="https://2017zhangmengru.github.io/web1/html/xinwenzhongxin/%E6%96%B0%E9%97%BB%E4%B8%AD%E5%BF%83">关于我们</a>
 					</li>
 					<form>
 						<input type="text" name="搜索" value="  搜索" class="sousuo" />
