--- a/html/jiejuefangan2/jiejuefangan2.html
+++ b/html/jiejuefangan2/jiejuefangan2.html
@@ -25,13 +25,13 @@
 			<div class="daohang">
 				<ul class="dh">
 					<li>
-						<a href="">首页</a>
+						<a href="https://2017zhangmengru.github.io/web1/">首页</a>
 					</li>
 					<li>
 						<a href="">产品中心</a>
 					</li>
 					<li>
-						<a href="">技术支持</a>
+						<a href="https://2017zhangmengru.github.io/web1/html/jishuzhichi/JiShuZhiChi%20ZongHeYe.html">技术支持</a>
 					</li>
 					<li>
 						<a href="" class="jishu">解决方案</a>
@@ -44,6 +44,9 @@
 					</li>
 					<li>
 						<a href="">访问论坛</a>
+					</li>
+					<li>
+						<a href="https://2017zhangmengru.github.io/web1/html/guanyu/guanyu.html">关于我们</a>
 					</li>
 					<form>
 						<input type="text" name="搜索" value="  搜索" class="sousuo" />
@@ -68,7 +71,7 @@
 				</div>
 				<div class="fk1">
 					<img src="image/a_07.jpg">
-					<h5 class="xbt">通用基础平台</h5>
+					<h5 class="xbt"><a href="https://2017zhangmengru.github.io/web1/html/jiejue3/jiejue3.html">通用基础平台</a></h5>
 					<ul class="list">
 						<li>通用硬件平台</li>
 						<li>通用软件平台</li>
@@ -77,7 +80,7 @@
 				</div>
 				<div class="fk">
 					<img src="image/b_07.jpg">
-					<h5 class="xbt">通用共性解决方案</h5>
+					<h5 class="xbt"><a href="https://2017zhangmengru.github.io/web1/html/jiejue1/jiejue1.html">通用共性解决方案</a></h5>
 					<ul class="list">
 						<li>微波/毫米波天线测试系统</li>
 						<li>材料电磁参数测试平台</li>
