--- a/html/jishuzhichi/JiShuZhiChi ZongHeYe.html
+++ b/html/jishuzhichi/JiShuZhiChi ZongHeYe.html
@@ -26,7 +26,7 @@
 		<div class="daohang">
 			<ul class="dh">
 				<li>
-					<a href="">首页</a>
+					<a href="https://2017zhangmengru.github.io/web1/">首页</a>
 				</li>
 				<li>
 					<a href="">产品中心</a>
@@ -35,20 +35,23 @@
 					<a href="" class="jishu">技术支持</a>
 				</li>
 				<li>
-					<a href="">解决方案</a>
+					<a href="https://2017zhangmengru.github.io/web1/html/jishuzhichi/JiShuZhiChi%20ZongHeYe.html">解决方案</a>
 				</li>
 				<li>
 					<a href="">计量和服务</a>
 				</li>
 				<li>
-					<a href="">新闻中心</a>
+					<a href="https://2017zhangmengru.github.io/web1/html/xinwenzhongxin/%E6%96%B0%E9%97%BB%E4%B8%AD%E5%BF%83">新闻中心</a>
 				</li>
 				<li>
 					<a href="">访问论坛</a>
 				</li>
+				<li>
+					<a href="https://2017zhangmengru.github.io/web1/html/guanyu/guanyu.html">关于我们</a>
+				</li>
 				<form>
 					<input type="text" name="搜索" value="  搜索" class="sousuo" />
-					<img src="image/搜索.png" class="sslogo">
+					<a href="https://2017zhangmengru.github.io/web1/tech/sousuo.html"><img src="image/搜索.png" class="sslogo"></a>
 				</form>
 			</ul>
 		</div>
@@ -69,7 +72,7 @@
 			</div>
 			<div class="fk1">
 				<img src="image/a_03.jpg">
-				<h5 class="xbt">产品资料库</h5>
+				<h5 class="xbt"><a href="https://2017zhangmengru.github.io/web1/tech/product.html">产品资料库</a></h5>
 				<ul class="list">
 					<li>选购指南</li>
 					<li>用户手册</li>
@@ -81,7 +84,7 @@
 			</div>
 			<div class="fk">
 				<img src="image/b_06.jpg">
-				<h5 class="xbt">驱动程序/固化软件</h5>
+				<h5 class="xbt"><a href="https://2017zhangmengru.github.io/web1/tech/qudong.html ">驱动程序/固化软件</a>
 				<ul class="list">
 					<li>驱动程序</li>
 					<li>仪器固化软件/软件</li>
@@ -90,7 +93,7 @@
 			</div>
 			<div class="fk">
 				<img src="image/c_08.jpg">
-				<h5 class="xbt">常见问题</h5>
+				<h5 class="xbt"><a href="https://2017zhangmengru.github.io/web1/tech/problem.html">常见问题</a></h5>
 				<ul class="list">
 					<li>计量与校准</li>
 					<li>配置与安装</li>
