--- a/html/xinwenzhongxin/新闻中心3.html
+++ b/html/xinwenzhongxin/新闻中心3.html
@@ -12,14 +12,14 @@
 </div>
 	<div class="box2" >
 		<ul class="dao">
-			<li><a href="">首页</a></li> 
+			<li><a href="https://2017zhangmengru.github.io/web1/">首页</a></li> 
 			<li><a href="">产品中心</a></li> 
-			<li><a href="">技术支持</a></li> 
-			<li><a href="">解决方案</a> </li> 
+			<li><a href="https://2017zhangmengru.github.io/web1/html/jishuzhichi/JiShuZhiChi%20ZongHeYe.html">技术支持</a></li> 
+			<li><a href="https://2017zhangmengru.github.io/web1/html/jiejuefangan2/jiejuefangan2.html">解决方案</a> </li> 
 			<li><a href="">计量和服务</a></li> 
-			<li ><a href="">新闻中心</a></li>
+			<li ><a href="https://2017zhangmengru.github.io/web1/html/xinwenzhongxin/%E6%96%B0%E9%97%BB%E4%B8%AD%E5%BF%83">新闻中心</a></li>
 			<li><a href="">访问论坛</a></li> 
-		    <li class="final"><a href="">关于我们</a></li> 
+		    <li class="final"><a href="https://2017zhangmengru.github.io/web1/html/guanyu/guanyu.html">关于我们</a></li> 
 		</ul> 
 	<form>
 		<img src="images/sou_03.jpg" class="sou">
@@ -27,7 +27,7 @@
 	</form>
 	</div>
 	<div class="n1">
-		<p class="n01">主页>新闻中心><span style="color:#728abb;">市场动态</span></p>
+		<p class="n01">主页><a href="https://2017zhangmengru.github.io/web1/html/xinwenzhongxin/新闻中心" style="color:black; text-decoration: none;">新闻中心</a>><span style="color:#728abb;">市场动态</span></p>
 		<h2 class="n02">市场动态</h2>
 		<p class="n03">market NEWS</p>
 		<img src="images/n1_03.jpg"  class="n04">
