--- a/html/xinwenzhongxin/新闻中心.html
+++ b/html/xinwenzhongxin/新闻中心.html
@@ -14,14 +14,14 @@
 	
 	<div class="box2" >
 		<ul class="dao">
-			<li><a href="">首页</a></li> 
+			<li><a href="https://2017zhangmengru.github.io/web1/">首页</a></li> 
 			<li><a href="">产品中心</a></li> 
-			<li><a href="">技术支持</a></li> 
-			<li><a href="">解决方案</a> </li> 
+			<li><a href="https://2017zhangmengru.github.io/web1/html/jishuzhichi/JiShuZhiChi%20ZongHeYe.html">技术支持</a></li> 
+			<li><a href="https://2017zhangmengru.github.io/web1/html/jiejuefangan2/jiejuefangan2.html">解决方案</a> </li> 
 			<li><a href="">计量和服务</a></li> 
-			<li ><a href="">新闻中心</a></li>
+			<li ><a href="https://2017zhangmengru.github.io/web1/html/xinwenzhongxin/%E6%96%B0%E9%97%BB%E4%B8%AD%E5%BF%83">新闻中心</a></li>
 			<li><a href="">访问论坛</a></li> 
-		    <li class="final"><a href="">关于我们</a></li> 
+		    <li class="final"><a href="https://2017zhangmengru.github.io/web1/html/guanyu/guanyu.html">关于我们</a></li> 
 		</ul> 
 	<form>
 		<img src="images/sou_03.jpg" class="sou">
@@ -35,9 +35,9 @@
 		<img src="images/n1_03.jpg"  class="n04">
 		<img src="images/f_03.jpg" class="f">
 		<div class="n05">
-		<p class="n06">新闻在线<span>查看更多新闻 ></span> </p>
+		<p class="n06"><a href="https://2017zhangmengru.github.io/web1/html/xinwenzhongxin/%E6%96%B0%E9%97%BB%E4%B8%AD%E5%BF%832.html" style="color:#999;" text-decoration: none;>新闻在线</a><span>查看更多新闻 ></span></p>
 		<img src="images/n2_03.jpg" class="n08">
-		<div class="p00">
+		<div class="p00">s
 		<p class="p0" >国家电投中央研究院与中国电科41所签署战略合作框架协议<span>2016-05-18</span></p>
 		<p class="p1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;日前，国家电投中央研究院与中国电科41所签署战略合作框架协议，就太阳能光伏、光热、风能等新能源领域的新型设备研制、检测数据分析平台开发、科研开发、人员培训、智库建设和公共服务平台建设开展广泛合，充分整合各自资源，优势互补，资源共享...</p>
 		<p class="p2">查看详细></p>
@@ -51,7 +51,7 @@
 		</ul>
 		</div>
 		<div class="n201">
-			<p class="n06">市场动态<span>查看更多动态 ></span> </p>
+		<p class="n06">	<a href="https://2017zhangmengru.github.io/web1/html/xinwenzhongxin/%E6%96%B0%E9%97%BB%E4%B8%AD%E5%BF%833.html" style="color:#999;" text-decoration: none; >市场动态</a><span>查看更多动态 ></span> </p>
 		<img src="images/n21_03.jpg" class="n08">
 		<div class="p00">
 		<p class="p0" >500GHz太赫兹网络分析仪与您相约2015年亚太微波盛会<span>2016-05-18</span></p>
@@ -68,7 +68,7 @@
 			
 		</div>
 		<div class="n202">
-			<p class="n06">最新活动<span>查看更多活动 ></span> </p>
+			<p class="n06"><a href="https://2017zhangmengru.github.io/web1/html/zuixin/zuixin.html" style="color:#999;" text-decoration: none;>最新活动</a><span>查看更多活动 ></span> </p>
 		<img src="images/n22_03.jpg" class="n08">
 		<div class="p00">
 		<p class="p0" >中电科仪器集团将在2016年8月5日开展技能培训课程<span>2016-05-18</span></p>
