--- a/html/xinwenzhongxin/新闻中心.html
+++ b/html/xinwenzhongxin/新闻中心.html
@@ -35,7 +35,7 @@
 		<img src="images/n1_03.jpg"  class="n04">
 		<img src="images/f_03.jpg" class="f">
 		<div class="n05">
-		<p class="n06"><a href="https://2017zhangmengru.github.io/web1/html/xinwenzhongxin/%E6%96%B0%E9%97%BB%E4%B8%AD%E5%BF%832.html" style="color:#999;" text-decoration: none;>新闻在线</a><span>查看更多新闻 ></span></p>
+		<p class="n06"><a href="https://2017zhangmengru.github.io/web1/html/xinwenzhongxin/%E6%96%B0%E9%97%BB%E4%B8%AD%E5%BF%832.html" style="color:#999; text-decoration: none;">新闻在线</a><span>查看更多新闻 ></span></p>
 		<img src="images/n2_03.jpg" class="n08">
 		<div class="p00">s
 		<p class="p0" >国家电投中央研究院与中国电科41所签署战略合作框架协议<span>2016-05-18</span></p>
@@ -51,7 +51,7 @@
 		</ul>
 		</div>
 		<div class="n201">
-		<p class="n06">	<a href="https://2017zhangmengru.github.io/web1/html/xinwenzhongxin/%E6%96%B0%E9%97%BB%E4%B8%AD%E5%BF%833.html" style="color:#999;" text-decoration: none; >市场动态</a><span>查看更多动态 ></span> </p>
+		<p class="n06">	<a href="https://2017zhangmengru.github.io/web1/html/xinwenzhongxin/%E6%96%B0%E9%97%BB%E4%B8%AD%E5%BF%833.html" style="color:#999; text-decoration: none; ">市场动态</a><span>查看更多动态 ></span> </p>
 		<img src="images/n21_03.jpg" class="n08">
 		<div class="p00">
 		<p class="p0" >500GHz太赫兹网络分析仪与您相约2015年亚太微波盛会<span>2016-05-18</span></p>
@@ -68,7 +68,7 @@
 			
 		</div>
 		<div class="n202">
-			<p class="n06"><a href="https://2017zhangmengru.github.io/web1/html/zuixin/zuixin.html" style="color:#999;" text-decoration: none;>最新活动</a><span>查看更多活动 ></span> </p>
+			<p class="n06"><a href="https://2017zhangmengru.github.io/web1/html/zuixin/zuixin.html" style="color:#999; text-decoration: none; ">最新活动</a><span>查看更多活动 ></span> </p>
 		<img src="images/n22_03.jpg" class="n08">
 		<div class="p00">
 		<p class="p0" >中电科仪器集团将在2016年8月5日开展技能培训课程<span>2016-05-18</span></p>
